--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
   --dark-blue: hsl(249, 10%, 26%);
   --grayish-blue: hsl(246, 25%, 77%);
   --fonts: "Poppins", sans-serif;
+  --border-radius: 6px;
+  --box-shadow: 0 6px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 * {
@@ -16,9 +18,172 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: var(--fonts);
   font-size: 16px;
   background-color: var(--red);
-  overflow: hidden;
+  /* overflow: hidden; */
+  background-image: url("../assets/bg-intro-desktop.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container {
+  max-width: 1440px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.container__singup {
+  /* border: 1px solid brown; */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Welcome */
+
+.welcome {
+  /* border: 1px solid black; */
+  width: 400px;
+  margin-right: 2rem;
+  color: #fff;
+}
+
+.welcome__title {
+  font-weight: 700;
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.welcome__pararagraph {
+  font-weight: 500;
+  font-size: 0.8rem;
+}
+
+/* Announcer */
+
+.information {
+  width: 500px;
+}
+
+.information__announcer {
+  background: var(--blue);
+  text-align: center;
+  display: block;
+  padding: 1rem 0;
+  border-radius: var(--border-radius);
+  margin-bottom: 1.4rem;
+  color: #fff;
+  box-shadow: var(--box-shadow);
+}
+
+.information__texts-announcer {
+  font-size: 0.8rem;
+  font-weight: 400;
+  display: inline-flex;
+  gap: 0.2rem;
+}
+
+.information__link {
+  color: #fff;
+  font-weight: 600;
+}
+
+/* Form */
+
+.form {
+  background-color: #fff;
+  border-radius: var(--border-radius);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: var(--box-shadow);
+}
+
+.form__field-content {
+  margin-bottom: 1rem;
+}
+
+.form__field {
+  border: 1px solid var(--grayish-blue);
+  border-radius: var(--border-radius);
+  padding: 0.8rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form__text-field {
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 0.8rem;
+  font-weight: 600;
+  font-family: var(--fonts);
+  margin-left: 1.5rem;
+}
+
+.form__icon-field {
+  color: var(--red);
+  font-size: 1.2rem;
+  margin-right: 1rem;
+  /* opacity: 0; */
+}
+
+.form__error-messages {
+  /* opacity: 0; */
+  color: var(--red);
+  font-size: 0.6rem;
+  font-style: italic;
+  text-align: right;
+  display: block;
+  margin-top: 4px;
+}
+
+.form__button {
+  background-color: var(--green);
+  border: none;
+  display: block;
+  height: 3rem;
+  font-weight: 700;
+  font-size: 0.8rem;
+  color: #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-radius: var(--border-radius);
+  margin-bottom: 1rem;
+  transition: 2s ease all;
+  box-shadow: 0 2px 0 1px rgb(59, 180, 127);
+}
+
+.form__button:hover {
+  background: #77e2b4;
+  box-shadow: 0 2px 0 1px rgb(115, 201, 163);
+}
+
+.form__terms-and-services {
+  /* border: 1px solid red; */
+  text-align: center;
+  font-size: 0.6rem;
+}
+
+.form__arguments {
+  color: var(--grayish-blue);
+  font-weight: 600;
+}
+
+.form__link {
+  color: var(--red);
+  font-weight: 700;
+}
+
+.form__link:hover {
+  text-decoration: underline;
 }
